@@ -7,6 +7,7 @@ changes in sbcl-1.0.28 relative to 1.0.27:
     potentially-invalid effective methods in its cache.
   * improvement: on x86/x86-64 Lisp call frames now have the same layout as C
     frames, allowing for instance more reliable backtraces.
+  * optimization: faster local calls on x86/x86-64
 
 changes in sbcl-1.0.27 relative to 1.0.26:
   * new port: support added for x86-64 OpenBSD. (thanks to Josh Elsasser)
